win32-loader (0.6.11) UNRELEASED; urgency=low

  * Remove kludge for etch support.
  * Merge all plugin code into a single DLL.

  [ Added translations ]
  * Kazakh (kk.po) by Dauren Sarsenov. Closes: #520999
    This language is not activated yet because NSIS is not
    translated. 

 -- Robert Millan <rmh@aybabtu.com>  Sun, 15 Mar 2009 12:48:54 +0100

win32-loader (0.6.10) unstable; urgency=low

  * Scan for the System Partition and use it consistently.  Fix problem that
    breaks cpio.bat when system partition != boot partition.  (Closes: #509299)

  [ Updated translations ]
  * Bulgarian (bg.po) by Damyan Ivanov
  * Basque (eu.po) by Piarres Beobide
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by mvillarino  (Closes: #510388)
  * Japanese (ja.po) by Hideki Yamane (Debian-JP)
  * Portuguese (pt.po) by Miguel Figueiredo
  * Romanian (ro.po) by Eddy Petrișor
  * Slovak (sk.po) by Ivan Masár  (Closes: #510199)
  * Thai (th.po) by Theppitak Karoonboonyanan
  * Vietnamese (vi.po) by Clytie Siddall  (Closes: #509711)

 -- Robert Millan <rmh@aybabtu.com>  Sun, 18 Jan 2009 13:07:46 +0100

win32-loader (0.6.9) unstable; urgency=high

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat  (Closes: #499605)
  * Turkish (tr.po) by Mert Dirik  (Closes: #500962)

  [ Robert Millan ]
  * Build-depend on a DFSG-clean version of loadlin.  (Closes: #497676)
  * Remove workaround for #469533 (it was no longer useful with Linux
    images in lenny, anyway).
  * main.nsi: Remove "search" command in grub.cfg.  It was a no-op.
  * Build-depend on grubutil-win32 >= 1.1-18-3.  (Closes: #503432)

 -- Robert Millan <rmh@aybabtu.com>  Thu, 30 Oct 2008 16:29:24 +0100

win32-loader (0.6.8) unstable; urgency=low

  [ Updated translations ]
  * Finnish (fi.po) unfuzzied
  * Russian (ru.po) by Yuri Kozlov  (Closes: #491446)
  * Swedish (sv.po) by Martin Bagge  (Closes: #490155)
  * Vietnamese (vi.po) by Clytie Siddall.
  * Romanian (ro.po) by Eddy Petrișor