@@ -6,7 +6,7 @@ Uploaders: Robert Millan <rmh@aybabtu.com>
 Build-Depends:
  cdbs,
  debhelper (>= 5),
- nsis (>= 2.25),
+ nsis (>= 2.44-4),
  mingw32,
  gettext,
  grub-pc (>= 1.96+20080724-10), grubutil-win32 (>= 1.1-18-3),
