@@ -17,7 +17,7 @@
  */
 
 #include <windows.h>
-#include "exdll.h"
+#include <nsis/pluginapi.h>
 
 void __declspec (dllexport) bcdedit_extract_id (HWND hwndParent, int string_size, char *variables, stack_t ** stacktop, extra_parameters * extra)
 {
