@@ -2,13 +2,14 @@ win32-loader (0.6.11) UNRELEASED; urgency=low
 
   * Remove kludge for etch support.
   * Merge all plugin code into a single DLL.
+  * Update to new NSIS plugin API.  (Closes: #517174)
 
   [ Added translations ]
   * Kazakh (kk.po) by Dauren Sarsenov. Closes: #520999
     This language is not activated yet because NSIS is not
     translated. 
 
- -- Robert Millan <rmh@aybabtu.com>  Sun, 15 Mar 2009 12:48:54 +0100
+ -- Robert Millan <rmh@aybabtu.com>  Tue, 24 Mar 2009 20:43:13 +0100
 
 win32-loader (0.6.10) unstable; urgency=low
 
